modified:   form.css

--- a/form.css
+++ b/form.css
@@ -79,6 +79,7 @@ input.radio-inline{
 
 textarea{
   background-color: #fbfbfb; 
+  box-sizing: border-box;
   width: 100%; 
   height: 75px; 
   border-radius: 5px;  
