--- a/form.css
+++ b/form.css
@@ -4,7 +4,7 @@
 body{
   height: 100%; 
   font-family: 'Noto Sans', sans-serif;
-  background-color: #0f3802cc; 
+  background: linear-gradient(to right, #386ecc 0%, #273432 100%);
 }
 
 .contact_form{  
@@ -33,7 +33,7 @@ h1{
   text-align: center; 
   margin:0px;
   margin-top: 15px;
-  color: #0f3802cc; 
+  color: #386ecc; 
 }
 
 h3{
@@ -51,7 +51,7 @@ input, select {
   border-radius: 5px;  
   border-style: solid; 
   border-width: 1px; 
-  border-color: #0f3802cc; 
+  border-color: #386ecc; 
   margin-top: 10px;  
   margin-right: 0px;  
   margin-bottom: 20px; 
@@ -85,7 +85,7 @@ textarea{
   border-radius: 5px;  
   border-style: solid; 
   border-width: 1px; 
-  border-color: #0f3802cc; 
+  border-color: #386ecc; 
   margin-top: 10px;  
   margin-right: 0px;
   margin-bottom: 20px; 
@@ -103,8 +103,8 @@ button{
   margin-bottom: 20px; 
   margin-top: 10px;   
   text-transform: uppercase;
-  background-color: #0f3802cc; 
-  border-color: #0f3802cc; 
+  background-color: #386ecc; 
+  border-color: #386ecc; 
   border-style: solid; 
   border-radius: 10px;  
   width: 100%;   
@@ -112,7 +112,7 @@ button{
 }
 
 span{
-  color: #0f3802cc; 
+  color: #0386ecc; 
 }
 
 .aviso{
@@ -130,22 +130,22 @@ span{
 
 .contactForm input:focus{
   outline:0;
-  border: 1px solid #97d848;
+  border: 2px solid #719eec;
 }
 
 .contactForm select:focus{
   outline:0;
-  border: 1px solid #97d848;
+  border: 2px solid #719eec;
 }
 
 .contactForm textarea:focus{
   outline:0;
-  border: 1px solid #97d848;
+  border: 2px solid #719eec;
 }
 
 .contactForm .alert:focus{
   outline:0;
-  border: 1px solid #f55e07;
+  border: 2px solid #f53f07;
 }
 
 /* Media Queries*/
