modified:   form.css

--- a/form.css
+++ b/form.css
@@ -155,3 +155,13 @@ span{
     width: 85%; 
   }
 }
+
+@media (max-width:366px){
+  .radio-inline {
+    display: block;
+  }
+  h1, h3{
+    font-size: 90%;  
+  }
+  
+} 
