--- a/index.css
+++ b/index.css
@@ -105,6 +105,17 @@ li{
 
 a{
     width: 90%;
+}
+
+.btn-nave{
+    background-color: rgba(144, 211, 211, 0.8);
+    margin: 5px;
+    border-radius: 10px;
+    padding: 15px;
+    list-style: none;
+    display: inline-block;
+    width: -moz-available;
+    vertical-align: top;
 
 }
 
@@ -179,9 +190,17 @@ img{
     grid-template-rows: 1fr 0.5fr 4fr 1fr;
     }
     
-    .aside, .asideTwo{
+    .asideTwo{
         display: none;
     }
+    .aside{
+        display: flex;
+        flex-direction: row;
+    }
+    .hidden{
+        display: none;
+    }
+
 
     .nav{
         flex-direction: column;
@@ -196,6 +215,7 @@ img{
     
     .nav>div{
         width: -moz-available;
+        text-align: center;
     }
 
     .card{
