--- a/index.css
+++ b/index.css
@@ -23,6 +23,7 @@ h1{
         font-family: 'Fredoka One', cursive;
         font-size: xxx-large;
         font-weight: 700;
+        font-style: oblique;
 }
 h2{
     font-family: 'Fredoka One', cursive;
@@ -38,12 +39,18 @@ h3, a {
     /* font-family: 'Raleway', sans-serif; */
 }
 
+.sub-title{
+    font-size: x-large;
+    font-weight:800;
+}
+
 
 .container{
     margin: 10px; 
     /* border: solid black 2px;   */
     border-radius: 20px; 
     padding: 10px;
+    
 }
 .containerMax{
     padding: 10px;
@@ -56,9 +63,6 @@ h3, a {
 }
 .cl{
     flex-direction: column;
-}
-.bk{
-    flex-direction: block;
 }
 
 .tx-c{
@@ -116,6 +120,9 @@ li{
     vertical-align: top;
     background-color: rgba(189, 166, 166, 0.8);
     transition: background-color  0.5s;
+    box-shadow: 6px 6px rgba(31, 30, 30, 0.8);
+    font-weight:bolder;
+    font-style: oblique;
 }
 
 a{
@@ -347,7 +354,7 @@ img{
         grid-row: y2 / y3;
     }
     .aside{
-        grid-column: x0 / x1,;
+        grid-column: x0 / x1;
         grid-row: y2 / y3;
     }
     .asideTwo{
