--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ BODY {
 h1{
    
         font-family: 'Fredoka One', cursive;
-        font-size: xxx-large;
+        font-size: xx-large;
         font-weight: 700;
         font-style: oblique;
 }
@@ -29,12 +29,20 @@ h2{
     font-family: 'Fredoka One', cursive;
     color: aliceblue;
     
+
+    
+}
+h2>a{
+    font-size: large;
+}
+h2>a:hover{
+    color:aqua
 }
 
 h3, a {
     font-family: 'Raleway', sans-serif;
     color: aliceblue;
-    font-size: larger;   
+      
 
     /* font-family: 'Raleway', sans-serif; */
 }
@@ -50,6 +58,13 @@ h3, a {
     /* border: solid black 2px;   */
     border-radius: 20px; 
     padding: 10px;
+    
+}
+.container-s{
+    margin: 3px; 
+    /* border: solid black 2px;   */
+    border-radius: 20px; 
+    padding: 3px;
     
 }
 .containerMax{
@@ -72,7 +87,7 @@ h3, a {
     border:solid rgba( 31, 97, 141, 0.8);
 }
 .wid-max{
-    width: -moz-available;
+    width: 90%;
 }
 .header-logo{
     width: auto;
@@ -123,6 +138,10 @@ li{
     box-shadow: 6px 6px rgba(31, 30, 30, 0.8);
     font-weight:bolder;
     font-style: oblique;
+    
+}
+.wd-fill-av{
+    width: -webkit-fill-available;
 }
 
 a{
@@ -130,7 +149,7 @@ a{
 }
 
 .btn-nave{
-    background-color: rgba(144, 211, 211, 0.8);
+    
     margin: 5px;
     border-radius: 10px;
     padding: 15px;
@@ -139,6 +158,9 @@ a{
     width: -moz-available;
     vertical-align: top;
 
+}
+.btn-nave-selected{
+    background-color: rgba(144, 211, 211, 0.8);
 }
 
 li:hover{
@@ -183,7 +205,7 @@ img{
      background: rgba(49, 45, 45, 0.5);   
 }
 .max-wid{
-    width: -moz-available;
+    width: webkit-fill-available ;
 }
 
 .card{
@@ -199,7 +221,102 @@ img{
     padding:10px
 }
 
-@media screen and (max-width: 784px) {
+@media screen and (max-width: 300px){
+    .flex{
+        flex-wrap: wrap;
+    }
+    .container{
+        padding: 5px;
+    }
+    li{
+        width: -webkit-fill-available;
+    }
+    ul{
+        width: -webkit-fill-available;
+    }
+
+    .index {
+    
+    /* background: rgb(6, 6, 160); */
+    
+    display: grid;
+
+    grid-template-columns: 1fr  ;
+
+    grid-template-rows: [y0] 1fr [y1] 0.5fr [y2] 4fr [y3]1fr [y4];
+    }
+
+    #logo{
+        display: none;
+    }
+    .header{
+        grid-row: y0/y1;
+    }
+    
+    .nav{
+        grid-row: y1/y2;
+        flex-direction: column;
+        margin-inline:0;
+        border-radius: 0;
+    }
+    .asideTwo{
+        display: none;
+    }
+    .aside{
+        grid-row: y2/y3;
+        display: flex;
+        flex-direction: row;
+    }
+    .hidden{
+        display: none;
+    }
+
+
+
+    .main{
+        margin-inline:0;
+        border-radius: 0;
+    }
+    
+    .nav>div{
+        width: -moz-available;
+        text-align: center;
+    }
+
+    .card{
+        margin:0;
+        border: none
+    }
+    h2{
+        font-size: medium;
+    }
+    .max-wid{ width:90%};
+    .wid-max{ width:90%};
+}
+
+@media screen and (min-width: 301px) and (max-width: 784px) {
+
+    .flex{
+        flex-wrap: wrap;
+    }
+    .container{
+        padding: 5px;
+    }
+    li{
+        width: -webkit-fill-available;
+    }
+    ul{
+        width: -webkit-fill-available;
+    }
+    .max-wid{
+         width:90%
+        }
+    .wid-max{
+         width:90%
+        }
+        h2{
+            font-size: medium;
+        }
 
     .index {
     
@@ -365,7 +482,7 @@ img{
         grid-row: y3 / y4;
    }
     
-    }
+}
 
     .form-boton{
         border-radius: 20px;
