--- a/index.css
+++ b/index.css
@@ -112,6 +112,24 @@ height: 120%;
     border-color: rgb(35, 117, 19);
 }
 
+#btn-clima{
+    height: 35px; 
+    padding-left: 5px;
+    padding-right: 5px;   
+    margin-bottom: 10px; 
+    margin-top: 10px;   
+    text-transform: uppercase;
+    background-color: #386ecc; 
+    border-color: #386ecc; 
+    border-style: solid; 
+    border-radius: 10px;  
+    width: 100%;   
+    cursor: pointer;
+}
+
+
+
+
 input{
     border-radius: 20px;
     padding: 10px;
@@ -201,9 +219,73 @@ img{
 .aside{
     background: rgba( 31, 97, 141, 0.8); 
 }
-.asideTwo{
+asideTwo{
     background: rgba( 31, 97, 141, 0.8); 
 }
+
+#container1{
+    background-color: red;
+    grid-gap: 10px;
+    display: grid;
+    text-align: center;
+}
+
+#container2{
+    grid-template-columns: 1fr 2fr 3fr;
+    grid-gap: 70px;
+    display: grid;
+    text-align: center;
+    vertical-align: top;
+}
+
+#caja1, #caja2, #caja3, #caja4, #caja5 {
+    background: rgba( 31, 97, 141, 0.8);
+    column-gap: 10px;
+    display: flex;
+    vertical-align: text-bottom;
+    column-gap: normal;
+    padding-top: 10%;
+    width: 200px;
+    height: 200x;
+    justify-content: center;
+    display: inline-block;
+}
+
+#caja1{
+    background-color: darkslategray;
+    font-size: small;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: normal;
+}
+
+#caja2{
+    background-color: darkblue;
+    font-size: small;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: normal;
+}
+
+#caja3{
+    background-color: darkcyan;
+    font-size: small;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: normal;
+}
+
+#caja4{
+    background-color: darkcyan;
+    font-size: small;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: normal;
+}
+
+#caja5{
+    background-color: darkkhaki;
+    font-size: small;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: normal;
+}
+
 .footer{ 
      background: rgba(49, 45, 45, 0.5);   
 }
