--- a/index.css
+++ b/index.css
@@ -202,12 +202,27 @@ img{
     object-fit: cover;
     width:100%;
     height:100%;
-  }
+}
 
 .header{
     background: rgba( 36, 113, 160 , 0.9); 
-
 }
+
+.header-title{
+    animation-duration: 3s;
+    animation-name: entrada;
+  }
+  
+  @keyframes entrada {
+    from {
+        scale: 0.5;
+    }
+    
+    to {
+        transform: scale(1);
+    }
+  }
+
 .nav{  
     background: rgba(29, 108, 161, 0.8);  
     justify-content: space-between;
@@ -219,7 +234,7 @@ img{
 .aside{
     background: rgba( 31, 97, 141, 0.8); 
 }
-asideTwo{
+.asideTwo{
     background: rgba( 31, 97, 141, 0.8); 
 }
 
@@ -466,13 +481,8 @@ asideTwo{
 .header-logo{
     grid-column: x0 / x1;
     margin: 20px
-}
-.header-title{
-    text-align: center;
-    grid-column: x1 / x2;
-    justify-content: center;
-    align-items: center;
-} */
+}*/
+
      
 @media screen and (min-width: 784px) and (max-width: 1280px) {
     
