--- a/form.css
+++ b/form.css
@@ -43,6 +43,9 @@ h3{
   color: #0e0e0e;   
 }
 
+label {
+  color: #0e0e0e;
+}
 input, select {
   background-color: #fbfbfb; 
   box-sizing: border-box;
