--- a/index.css
+++ b/index.css
@@ -10,32 +10,29 @@ BODY {
     }
 
 .index{
-    /* background-image: url("https://easbcn.com/wp-content/uploads/2020/12/rgf.jpg") ; */
     background-size:100%;
     height: 80vh;
-    /* padding: 10px */
     margin: 0;
     border: none;
     padding: 0;
 }
 
 h1{
-   
         font-family: 'Fredoka One', cursive;
         font-size: xx-large;
         font-weight: 700;
         font-style: oblique;
 }
+
 h2{
     font-family: 'Fredoka One', cursive;
     color: aliceblue;
-    
-
-    
 }
+
 h2>a{
     font-size: large;
 }
+
 h2>a:hover{
     color:aqua
 }
@@ -43,9 +40,6 @@ h2>a:hover{
 h3, a {
     font-family: 'Raleway', sans-serif;
     color: aliceblue;
-      
-
-    /* font-family: 'Raleway', sans-serif; */
 }
 
 .sub-title{
@@ -96,7 +90,7 @@ height: 120%;
 }
 .btn{
     border-radius: 40px;
-    border: solid 10px;
+    border: solid 5px;
     padding: 10px 50px; 
     color: white;
     text-decoration: none;
@@ -159,6 +153,7 @@ li{
     font-style: oblique;
     
 }
+
 .wd-fill-av{
     width: -webkit-fill-available;
 }
@@ -207,6 +202,7 @@ img{
 
 .header{
     background: rgba( 36, 113, 160 , 0.9); 
+    margin-bottom: 10px;
 }
 
 .header-title{
