modified:   clima.css 	modified:   clima.html 	modified:   index.css 	modified:   style.css

--- a/index.css
+++ b/index.css
@@ -1,13 +1,9 @@
 BODY {
-
     background-color : #10116d;
-
     margin: 0;
     font-family : arial;
-
     color :white;
-    
-    }
+}
 
 .index{
     background-size:100%;
@@ -19,7 +15,7 @@ BODY {
 
 h1{
         font-family: 'Fredoka One', cursive;
-        font-size: xx-large;
+        font-size: 40px;
         font-weight: 700;
         font-style: oblique;
 }
@@ -208,6 +204,8 @@ img{
 .header-title{
     animation-duration: 3s;
     animation-name: entrada;
+   margin-top: 33.2px;
+   margin-bottom: 33.2px;
   }
   
   @keyframes entrada {
@@ -368,6 +366,7 @@ img{
     #logo{
         display: none;
     }
+
     .header{
         grid-row: y0/y1;
     }
@@ -378,19 +377,20 @@ img{
         margin-inline:0;
         border-radius: 0;
     }
+
     .asideTwo{
         display: none;
     }
+
     .aside{
         grid-row: y2/y3;
         display: flex;
         flex-direction: row;
     }
+
     .hidden{
         display: none;
     }
-
-
 
     .main{
         margin-inline:0;
@@ -406,17 +406,20 @@ img{
         margin:0;
         border: none
     }
+
     h2{
         font-size: medium;
     }
-    .max-wid{ width:90%};
-    .wid-max{ width:90%};
+
+    .max-wid{ 
+        width:90%};
+    .wid-max{ 
+        width:90%};
 }
 
 @media screen and (min-width: 301px) and (max-width: 784px) {
 
     #page-footer{
-        /*background-image: url("img/Productos-y-servicios-de-las-agencias-de-viajes-660x330.jpg");*/
         opacity: 1;
         filter:alpha(opacity=40);  
         background-position: center;
@@ -448,13 +451,8 @@ img{
         }
 
     .index {
-    
-    /* background: rgb(6, 6, 160); */
-    
     display: grid;
-
     grid-template-columns: 1fr  ;
-
     grid-template-rows: [y0] 1fr [y1] 0.5fr [y2] 4fr [y3]1fr [y4];
     }
 
@@ -483,9 +481,11 @@ img{
         display: none;
     }
 
-
-
     .main{
+        margin-inline:0;
+        border-radius: 0;
+    }
+    .main-clima{
         margin-inline:0;
         border-radius: 0;
     }
@@ -557,6 +557,12 @@ img{
         grid-column: x1 / x3;
         grid-row: y2 / y3;
     }
+    .main-clima{
+        grid-column: x0 / x3;
+        grid-row: y2 / y3;
+        margin-right: 15%;
+        margin-left: 15%;
+    }
     .aside{
         grid-column: x0 / x1;
         grid-row: y2 / y3;
@@ -610,6 +616,10 @@ img{
 
     .main{
         grid-column: x1 / x3;
+        grid-row: y2 / y3;
+    }
+    .main-clima{
+        grid-column: x1 / x2;
         grid-row: y2 / y3;
     }
     .aside{
