--- a/index.css
+++ b/index.css
@@ -658,3 +658,12 @@ img{
         height: 100%;
         width: 100%;
     }    
+
+    table, th, td {
+        border:1px solid black;}
+   .main-viajes{
+        flex-direction: column;
+    }
+    p{
+        text-align: center;
+    }
